:pencil: Give the hero a fixed height To  stop the nav from jumping around on big titles

--- a/src/styles/components/_gistMarkup.scss
+++ b/src/styles/components/_gistMarkup.scss
@@ -300,3 +300,7 @@ article {
 		color: $lightest;
 	}
 }
+
+#hero {
+	height: 200px;
+}
